[package]
name = "n-roman"
version = "0.1.0"
edition = "2021"
description = "Converts integers to Roman numerals and vice versa"
license = "MIT"
authors = ["Julio Alvarez <usr.jul.alv@gmail.com>"]
repository = "https://github.com/yourusername/roman-numerals"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
