[package]
name = "n-roman"
version = "0.1.1"
edition = "2021"
description = "Converts integers to Roman numerals and vice versa"
license = "MIT"
authors = ["Julio Alvarez <usr.jul.alv@gmail.com>"]
repository = "https://github.com/julio-alv/n-roman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-test = "0.3.34"


[lib]
crate-type = ["cdylib"]
