[package]
name = "n-roman"
version = "0.1.2"
edition = "2021"
description = "Converts integers to Roman numerals and vice versa"
license = "MIT"
authors = ["Julio Alvarez <usr.jul.alv@gmail.com>"]
repository = "https://github.com/julio-alv/n-roman"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
